@@ -20,9 +20,9 @@
 
     <p><ol>
 	<li>xmlclient [username=&lt;username&gt;] [password=&lt;password&gt;] &lt;xmlfile&gt;</li>
-	<li>xmlclient [username=&lt;username&gt;] [password=&lt;password&gt;] -dump</li>
+	<li>xmlclient [username=&lt;username&gt;] [password=&lt;password&gt;] -dump [-includeHistory]</li>
 	<li>xmlclient [username=&lt;username&gt;] [password=&lt;password&gt;] -dumpschema</li>
-	<li>xmlclient [username=&lt;username&gt;] [password=&lt;password&gt;] -dumpdata [sync=channel]</li>
+	<li>xmlclient [username=&lt;username&gt;] [password=&lt;password&gt;] -dumpdata [-includeHistory] [sync=channel]</li>
     </ol></p>
 
     <p>Running xmlclient with a file name for a parameter will cause
@@ -40,6 +40,11 @@
     href="../synchronization/index.html">Sync
     Channel</a>, the xmlclient will only write out data required for
     that Sync Channel..  </p>
+
+    <p>The <code>-includeHistory</code> command line flag causes the
+    xmlclient to dump out the historical fields (creation time,
+    creator information, last modified time, last modifier
+    information) in the dump.</p>
 
     <p>The xmlclient assumes that it is being run by the supergash
     account by default.  Only supergash-level admins are allowed to
