@@ -20,6 +20,7 @@ global.passArg = password
 global.bufArg = bufsize
 global.dumpSchemaArg = dumpschema
 global.dumpDataArg = dumpdata
+global.includeHistory = includeHistory
 global.syncArg = sync
 global.dumpArg = dump
 global.testArg = test
@@ -50,9 +51,9 @@ init.badFile = Ganymede xmlclient: Error, file {0} does not exist
 #
 
 printUsage.text = Usage:\n1: xmlclient [username=<username>] [password=<password>] <xmlfile>\n\
-2: xmlclient [username=<username>] [password=<password>] -dump\n\
+2: xmlclient [username=<username>] [password=<password>] -dump [-includeHistory]\n\
 3: xmlclient [username=<username>] [password=<password>] -dumpschema\n\
-4: xmlclient [username=<username>] [password=<password>] -dumpdata [sync=<sync channel>]
+4: xmlclient [username=<username>] [password=<password>] -dumpdata [-includeHistory] [sync=<sync channel>]
 
 #
 # doSendChanges
